# PPG

./: .gitignore  COST_REDUCTION.md  README.md  pyproject.toml
.claude/: settings.local.json
ppg/: __init__.py  logging_utils.py
ppg/ablations/: __init__.py  study.py
ppg/bandits/: __init__.py  linucb.py
ppg/core/: __init__.py  executor.py  features.py  graph.py  tokenizer.py
ppg/data/: __init__.py  fragments.py
ppg/eval/: __init__.py  external.py  harness.py  path_search.py  portfolio.py  suite.py
ppg/eval/benchmarks/: __init__.py  loaders.py
ppg/lm/: __init__.py  clients.py
ppg/training/: __init__.py  branching.py  credit.py  evolution.py  meta_learning.py  reflection.py  reward.py  trainer.py
scripts/: run_benchmark.py  run_suite.py
tests/: test_cost_reduction.py
tests/test_ablations/: test_study.py
tests/test_bandits/: test_linucb.py
tests/test_core/: test_executor.py  test_features.py  test_graph.py
tests/test_data/: test_fragments.py
tests/test_eval/: test_external.py  test_harness.py  test_path_search.py  test_portfolio.py  test_suite.py
tests/test_eval/test_benchmarks/: test_loaders.py
tests/test_lm/: test_clients.py
tests/test_training/: test_credit.py  test_reward.py  test_trainer.py
