[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppg"
version = "0.1.0"
description = "Prompt Policy Graphs: typed fragment routing for efficient and robust LLM prompting"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "networkx>=3.2",
    "pydantic>=2.0",
    "openai>=1.30",
    "anthropic>=0.28",
    "tiktoken>=0.7",
    "sentence-transformers>=3.0",
    "scikit-learn>=1.4",
    "datasets>=2.19",
    "wandb>=0.17",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "graphviz>=0.20",
    "nltk>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
local-lm = [
    "transformers>=4.40",
    "vllm>=0.5",
    "torch>=2.2",
]
baselines = [
    "dspy-ai>=2.4",
    "gepa>=0.1",
]
progress = [
    "tqdm>=4.66",
    "rich>=13.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ppg*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
